# collect_service

./: .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: style_check.yml
infra/: .env.example  docker-compose.yaml
src/: .dockerignore  Dockerfile  manage.py  requirements.txt
src/api/: admin.py  apis.py  apps.py  cache.py  email.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
src/api/management/commands/: mock_data.py
src/config/: settings.py  urls.py
src/templates/emails/: collect_created.html  to_author.html  to_donator.html
tests/: base.py  conftest.py  test_collect_model.py  test_collect_viewset.py  test_payment_model.py  test_payment_viewset.py  test_user_registration.py
